--- a/client/app.css
+++ b/client/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+/* @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
 .switch-field {
   display: flex;
@@ -131,4 +131,162 @@ h2 {
 body,
 html {
   height: 100%;
+} */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
+body{
+    font-family: 'Merriweather Sans', sans-serif !important;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+.hero-section{
+    height: 100vh !important;
+}
+
+.first-side{
+    background-color: #130E2D;
+}
+
+
+.left-side-image{
+    background-image: url('https://sites.psu.edu/almugren/wp-content/uploads/sites/4603/2013/12/burj-khalifa-at-night-3.jpeg');
+    height: 100vh !important;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.left-side-header{
+    color: white;
+    font-size: 5rem;
+    font-weight: 900;
+    position: absolute;
+    top: 35%;
+    left: -20%;
+    z-index: 2;
+    text-align: left;
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(48, 48, 48, 0.4); /* Black w/opacity/see-through */
+    width:95%;
+    border-radius: 10px;
+    padding: 15px;
+}
+
+.right-side{
+    margin:2% 0;
+}
+
+.jumbotron{
+    border-radius: 10px;
+    background-color: white !important;
+    filter: drop-shadow(1px 5px 15px#c5c5c5);
+}
+
+.btn.btn-primary{
+    background-color: #130E2D;
+    letter-spacing: 1.2;
+    height: 3rem;
+    border-color:  #130E2D;
+}
+
+.btn.btn-primary:hover{
+    background-color: white;
+    color: #130E2D;
+    border-color:  #130E2D;
+}
+
+.marLeft{
+    margin-left: -1rem !important;
+}
+
+@media only screen and (max-width:768px){
+
+    body{
+        overflow-x:hidden !important;
+        overflow-y: visible;
+    }
+
+    .left-side-image{
+        background-image: url('https://sites.psu.edu/almugren/wp-content/uploads/sites/4603/2013/12/burj-khalifa-at-night-3.jpeg');
+        
+        /* Full height */
+        height: 50vh !important; 
+
+        
+        /* Center and scale the image nicely */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    .left-side-header{
+        color: white;
+        font-size: 2.5rem;
+        width: 50%;
+        font-weight: 900;
+        position: absolute;
+        top: 25%;
+        left: 25%;
+        z-index: 2;
+        text-align: center;
+        background-color: rgb(32, 32, 32); /* Fallback color */
+        background-color: rgba(36, 36, 36, 0.4); /* Black w/opacity/see-through */
+        border-radius: 10px;
+        padding: 5px;
+    }
+
+    .right-side{
+        margin-top: 3rem;
+    }
+
+    .marLeft{
+        margin-left: 0rem !important;
+    }
+}
+
+@media only screen and (min-width:768px) and (max-width:991px){
+    body{
+        overflow-x:hidden !important;
+        overflow-y: visible;
+    }
+
+    .left-side-image{
+        background-image: url('https://sites.psu.edu/almugren/wp-content/uploads/sites/4603/2013/12/burj-khalifa-at-night-3.jpeg');
+        
+        /* Full height */
+        height: 50vh !important; 
+
+        
+        /* Center and scale the image nicely */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    .left-side-header{
+        color: white;
+        font-size: 2.5rem;
+        width: 50%;
+        font-weight: 900;
+        position: absolute;
+        top: 25%;
+        left: 25%;
+        z-index: 2;
+        text-align: center;
+        background-color: rgb(32, 32, 32); /* Fallback color */
+        background-color: rgba(36, 36, 36, 0.4); /* Black w/opacity/see-through */
+        border-radius: 10px;
+        padding: 5px;
+    }
+
+    .right-side{
+        margin-top: 3rem;
+    }
+
+    .marLeft{
+        margin-left: 0rem !important;
+    }
 }
